# grafika2025

app/: CMakeLists.txt
app/src/: Main.cpp
